tests/integration/features/options/options_per_document/AUTO_LEVELS/03_section_level_is_not_provided_when_automatic_levels_is_off/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail
CHECK: error: [SECTION].LEVEL field is not provided. This contradicts to the option [DOCUMENT].OPTIONS.AUTO_LEVELS set to Off.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
